src/test/pass/optargs/optarg_satisfy_smaller.lly
define f(a: integer, b: *integer=10) {  }

define g(a: function(integer)) {  }

g(f)
