src/test/fail/basic_syntax/function_arg_redecl.lly
#[
SyntaxError: a has already been declared.
Where: File "function_arg_redecl.lly" at line 6
]#

define f(a: integer, a: integer) {}
